tests/NormalTests/paczka1/fuzzy1/71986937.err
Error in line 9: A448 A218 33,2
Error in line 11: EEY1XUNBDw A448 64,1
Error in line 16: EEY1XUNBDw A701 1,2
Error in line 20: aGEbRJWDj A707 0,6
Error in line 19: mWE1v S368 59,4
Error in line 23: WwRO A448 80,1
Error in line 17: T6yQQ9DfR A218 28,9
